# shop-api

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/: pytest.ini
backend/accounts/: factories.py  models.py  permissions.py  serializers.py  urls.py  validators.py  views.py
backend/accounts/management/commands/: populate_users.py
backend/accounts/migrations/: 0001_initial.py
backend/accounts/tests/: conftest.py  test_viewset.py
backend/config/: settings.py  urls.py
